--- a/src/exercicis/acordio/acordio.css
+++ b/src/exercicis/acordio/acordio.css
@@ -6,5 +6,18 @@
   display: none;
 }
 .paragrafVista {
-  display: inline;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 2rem;
+  margin: 0 auto;
+  width: 400px;
+  height: 200px;
+  text-align: center;
+
+  padding-left: 0.9rem;
+  padding-right: 0.9rem;
+}
+.itemsAcordio {
+  background-color: darkgrey;
 }
