--- a/src/exercicis/carousel/carousel.css
+++ b/src/exercicis/carousel/carousel.css
@@ -1,17 +1,69 @@
+img {
+    width: 100%;
+    vertical-align: top;
+}
+.titol {
+    font-size: 1.1rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: .7rem;
+}
 
-
-.sliderContainer {
-    
+.contenidorSlideShow {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 10%;
-    height: 90%;
-    margin: auto;
-    margin-top: 10rem;;
+    flex-wrap: nowrap;
+}
+.slides {
+    min-width: 100%;
+    overflow: hidden;
+    transition: .3s ease all;
+    z-index: 10;
+    max-height: 500px;
+    position: relative;
+    
+}
+.sliderContainer {
+    position:relative;
     overflow: hidden;
 }
-.imageCarousel {
-    width: 249.28px;
-    height: 143.98px;
+.controls {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 0;
+    z-index: 30;
+    width: 100%;
+    height: 100%
 }
+.boto {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    width: 50px;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    transition: .3s ease all;
+}
+#dreta {
+    right: 0;
+}
+
+.textSlide {
+    background: rgba(0,0,0,.4);
+    color: #fff;
+    width: 100%;
+    padding-top: 7px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+}
+@media (max-width: 700px) {
+    .textSlide {
+        position: relative;
+        background: black;
+    }
+}
+
+
