--- a/src/exercicis/acordio/acordio.css
+++ b/src/exercicis/acordio/acordio.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: center;
   font-size: 2rem;
-  color:lightsteelblue;
+  color: darkblue;
   margin: 0 auto;
   width: 400px;
   height: 200px;
@@ -20,5 +20,5 @@
   padding-right: 0.9rem;
 }
 .itemsAcordio {
-  background-color:mintcream;
+  background-color: mintcream;
 }
