--- a/src/exercicis/toogleGroup/toggleGroup.css
+++ b/src/exercicis/toogleGroup/toggleGroup.css
@@ -19,3 +19,15 @@
   font-size: 3rem;
   background-color: darkgrey;
 }
+
+.red {
+  color: red;
+  background-color: yellowgreen;
+  border: none;
+  border-radius: 20px;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 2rem;
+}
