Commit - Arrenjaments galeria i tres-en-ratlla

--- a/src/exercicis/toggle/toggle.css
+++ b/src/exercicis/toggle/toggle.css
@@ -10,7 +10,7 @@
   font-size: 2rem;
 }
 
-.toggleButton {
+.toggleButtonSingle {
   margin-bottom: 1rem;
   margin-right: 1rem;
   background-color: #4caf50; /* Green */
